--- a/home_assistant/docker-compose.yml
+++ b/home_assistant/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - /home/r0oland/docker/data/homeassistant_data:/config
       - /etc/localtime:/etc/localtime:ro
-    restart: unless-stopped
+    restart: always
     privileged: true
     network_mode: host
     devices:
@@ -20,7 +20,6 @@ services:
     depends_on:
       - mosquitto
       - node-red
-      - esphome
       - tasmoadmin
       - grafana
 
@@ -36,7 +35,7 @@ services:
       - node-red-net
     volumes:
       - node-red-data:/data
-    restart: unless-stopped
+    restart: always
 
 ###################TASMOADMIN
   tasmoadmin:
@@ -46,29 +45,34 @@ services:
       - 9999:80
     volumes:
       - /home/r0oland/docker/data/tasmoadmin_data:/data
-    restart: unless-stopped
+    restart: always
 
 
 ###################
   mosquitto:
     container_name: mosquitto
     image: eclipse-mosquitto
-    network_mode: host
-    restart: unless-stopped
+    # network_mode: host
+    ports:
+      - 1883:1883
+      - 9001:9001
     volumes:
       - /home/r0oland/docker/data/mosquitto_data/data:/mosquitto/data
       - /home/r0oland/docker/data/mosquitto_data/log:/mosquitto/log
       - /home/r0oland/docker/data/mosquitto_data/config:/mosquitto/config
+    restart: always
 
-###################
-  esphome:
-    image: esphome/esphome
-    volumes:
-      - /home/r0oland/docker/data/espHome_data:/config:rw
-      # Use local time for logging timestamps
-      - /etc/localtime:/etc/localtime:ro
-    network_mode: host
-    restart: unless-stopped  
+# ###################
+# disable for now, we are adding our ESP home devices manually
+# see https://github.com/r0oland/SmartHomePlayground/tree/main/ESP32_to_HomeAssistant
+#   esphome:
+#     image: esphome/esphome
+#     volumes:
+#       - /home/r0oland/docker/data/esphome:/config:rw
+#       # Use local time for logging timestamps
+#       - /etc/localtime:/etc/localtime:ro
+#     network_mode: host
+#     restart: always  
 
 ###################
   influxdb:
@@ -81,6 +85,8 @@ services:
       - INFLUXDB_DB=db0
       - INFLUXDB_ADMIN_USER=${INFLUXDB_USERNAME}
       - INFLUXDB_ADMIN_PASSWORD=${INFLUXDB_PASSWORD}
+    restart: always  
+    
 
 ###################
   chronograf:
@@ -95,12 +101,15 @@ services:
       - INFLUXDB_URL=http://influxdb:8086
       - INFLUXDB_USERNAME=${INFLUXDB_USERNAME}
       - INFLUXDB_PASSWORD=${INFLUXDB_PASSWORD}
+    restart: always  
+    
 
 ###################
   grafana:
     image: grafana/grafana:latest
     ports:
       - '3000:3000'
+    user: '1000'
     volumes:
       - /home/r0oland/docker/data/grafana:/var/lib/grafana
     depends_on:
@@ -109,6 +118,7 @@ services:
     environment:
       - GF_SECURITY_ADMIN_USER=${GRAFANA_USERNAME}
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
+    restart: always
 
 ###################
   glances:
@@ -122,6 +132,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       # - /home/r0oland/docker/data/glances:/glances/conf/glances.conf
     pid: "host"
+    restart: always
 
 # Volumes ======================================================================
 volumes:
